# r2-cli

./: Cargo.toml  LICENSE  README.md  example.config.toml  r2-cli
.github/workflows/: check.yml  release.yml
src/: cli.rs  config.rs  init.rs  list_buckets.rs  list_files.rs  main.rs  s3_client.rs  upload.rs  util.rs
src/buckets/: create.rs  delete.rs  list_buckets.rs  mod.rs
src/client/: config.rs  init.rs  mod.rs  s3_client.rs
src/files/: delete.rs  download.rs  list_files.rs  mod.rs  upload.rs
