[package]
name = "r2-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
aws-config = "1.8.6"
aws-sdk-s3 = "1.104.0"
clap = { version = "4.5.46", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
walkdir = "2.5.0"
