[package]
name = "pepper-s3-cli"
version = "1.1.5"
edition = "2024"
description = "A simple CLI tool to manage S3 buckets and files from the terminal"
license = "MIT"
readme = "README.md"
repository = "https://github.com/0x5b62656e5d/s3-cli"

[[bin]]
name = "s3-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.99"
aws-config = "1.8.6"
aws-credential-types = "1.2.6"
aws-sdk-s3 = "1.104.0"
byte-unit = "5.1.6"
chrono = "0.4.41"
clap = { version = "4.5.46", features = ["derive"] }
inquire = "0.7.5"
serde = { version = "1.0.219", features = ["derive"] }
tabled = "0.20.0"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
tree_magic = "0.2.3"
walkdir = "2.5.0"
